# HttpApiServiceRust

./: Cargo.toml
src/: lib.rs  main.rs
src/additional_service/: mod.rs  services.rs
src/dao/: dao_user.rs  mod.rs
src/data/: context.rs  mod.rs
src/http/: controllers.rs  mod.rs
src/models/: mod.rs  users.rs
src/service/: mod.rs  service_user.rs
src/sql_mapper/: mod.rs  user_mapper.rs
src/test/: mod.rs  test_mod.rs
