[package]
name = "appHttpMicroService"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.1", features = ["with-uuid-0_8"] }
tokio-postgres = "0.7.2"
postgis = "0.8.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
actix-web = "4.0.0-beta.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
tiny_http = "0.6"
tokio = "1.6.1"

#[lib]
#name = "appHttpMicroService"
#path = "src/lib.rs"